Fix: `IconButton` icon <> text alignment

--- a/src/modules/core/components/Button/IconButton.css
+++ b/src/modules/core/components/Button/IconButton.css
@@ -1,5 +1,6 @@
 .main i {
-  margin-right: 5px;
+  vertical-align: top;
+  margin: 3px 5px 0 0;
 }
 
 /*
